of conditionals.

** Abbrev mode

+++
*** Emacs can now suggest to use an abbrev based on text you type.
A new user option, 'abbrev-suggest', enables the new abbrev suggestion
feature.  When enabled, if a user manually types a piece of text that
could have saved enough typing by using an abbrev, a hint will be
displayed in the echo area, mentioning the abbrev that could have been
used instead.


* New Modes and Packages in Emacs 28.1

** Lisp Data mode
The new command 'lisp-data-mode' enables a major mode for buffers
composed of Lisp symbolic expressions that do not form a computer
program.  The ".dir-locals.el" file is automatically set to use this
mode, as are other data files produced by Emacs.

** hierarchy.el
It's a library to create, query, navigate and display hierarchy structures.

** New themes 'modus-vivendi' and 'modus-operandi'.
These themes are designed to conform with the highest standard for
color-contrast accessibility (WCAG AAA).  You can load either of them
using 'M-x customize-themes' or 'load-theme' from your init file.
Consult the Modus Themes Info manual for more information on the user
options they provide.

** Dictionary mode
This is a mode for searching a RFC 2229 dictionary server.
'dictionary' opens a buffer for starting operations.
'dictionary-search' performs a lookup for a word.  It also supports a
'dictionary-tooltip-mode' which performs a lookup of the word under
the mouse in 'dictionary-tooltip-dictionary' (which must be customized
first).


* Incompatible Editing Changes in Emacs 28.1

** In 'nroff-mode', 'center-line' is now bound to 'M-o M-s'.
The original key binding was 'M-s', which interfered with I-search,
since the latter uses 'M-s' as a prefix key of the search prefix map.

** 'vc-print-branch-log' shows the change log for BRANCH from its root
directory instead of the default directory.


* Incompatible Lisp Changes in Emacs 28.1

** 'set-process-buffer' now updates the process mark.